# pz-hiring

./: Cargo.toml  README.md
i_hiring_node/: package.json  pz_web.d.ts  pz_web.js  pz_web_bg.wasm  pz_web_bg.wasm.d.ts  test.js
i_hiring_web/: index.html  pz_web.d.ts  pz_web.js  pz_web_bg.wasm
ni_hiring_web/: README.md  index.html  pz_web.d.ts  pz_web.js  pz_web_bg.wasm
node_test/: index.js  package-lock.json  package.json
pz_hiring/: README.md  package-lock.json  package.json  pz_web.js  pz_web_bg.wasm  pz_web_bg.wasm.d.ts
pz_hiring_browser/: pz_web.d.ts  pz_web.js
pz_hiring_node/: package-lock.json  package.json  pz_web.d.ts  pz_web_bg.wasm
src/: i_hiring.rs  i_hiring_web.rs  lib.rs  ni_hiring.rs  ni_hiring_web.rs
web/: README.md  index.html  package.json  pz_web.d.ts  pz_web.js  pz_web_bg.wasm  pz_web_bg.wasm.d.ts
