[package]
name = "pz-web"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
phantom-zone = {git="https://github.com/RiverRuby/phantom-zone", branch="wasm", features=["interactive_mp"]}
getrandom = { version = "0.2", features = ["js"] }
itertools = "0.12.0"
rand = "*"
wasm-bindgen = "0.2"
lazy_static = "1.4"
serde-wasm-bindgen = "0.4"
serde = { version = "1.0", features = ["derive"] }
web-sys = { version = "0.3.69", features = ['console'] }
